--- a/collab/index.html
+++ b/collab/index.html
@@ -12,14 +12,34 @@
 <body>
     <header>
     <div class="topLine">
-        <p>India’s first mobile app for construction industry. Learn More </p>
+        <p>India’s first mobile app for construction industry. <span class="learnMore">Learn More</span> </p>
+    </div>
+    <div class="menuContainer">
+        <div class="topLogo">
+            <img src="" alt="">
+        </div>
+    
+
+    <nav class="topNavContainer">
+    <ul class="topUlcontainer">
+        <li></li>
+    </ul>
+    <button class=""></button>
+    </nav>
+    
+
+
+
+
     </div>
     </header>
 
-    <main>
+    <main class="mainContainer">
 
-        <section>
-
+        <section class="main ContainerSectionOne">
+            <h2 class="topHead">Easy solution for builders and contractors
+                to manage and execute projects within budget range</h2>
+            <button class="topHeadBtn">Reqest Demo</button>
         </section>
 
     </main>
