--- a/collab/index.html
+++ b/collab/index.html
@@ -42,6 +42,42 @@
                 to manage and execute projects within budget range</h2>
             <button class="topHeadBtn">Request Demo</button>
         </section>
+
+<section class="elipseContainer">
+    <div class="allElipseWithButton">
+        <img src="./images/Ellipse 1.png" alt="" class="bigElipse">
+        <img src="./images/Ellipse 2.png" alt="" class="smallElipse">
+        <img src="./images/Rectangle 3.png" alt="" class="rectangle">
+        <img src="./images/Collab.svg" alt="" class="collabWord">
+
+        <button class="elipseButton">Explore Products</button>
+
+    </div>
+</section>
+
+<section class="fiveIconsContainer">
+    <h2>Trusted by top brands</h2>
+    <div class="fievIconContainer">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+</section>
+
+<section class="howHelpContainer">
+<h2>How does Collab-app help?</h2>
+
+<div class="paraPhoneContainer">
+    <div class="paraContainer">
+<div class="howHelpButton"></div>
+    <div class="imgContainer"></div>
+    </div>
+</div>
+
+
+</section>
     </main>
 
     <aside></aside>
