--- a/collab/index.html
+++ b/collab/index.html
@@ -43,41 +43,60 @@
             <button class="topHeadBtn">Request Demo</button>
         </section>
 
-<section class="elipseContainer">
-    <div class="allElipseWithButton">
-        <img src="./images/Ellipse 1.png" alt="" class="bigElipse">
-        <img src="./images/Ellipse 2.png" alt="" class="smallElipse">
-        <img src="./images/Rectangle 3.png" alt="" class="rectangle">
-        <img src="./images/Collab.svg" alt="" class="collabWord">
+        <section class="elipseContainer">
+            <div class="allElipseWithButton">
+                <img src="./images/bigEllipse.svg" alt="" class="bigElipse" />
+                <img src="./images/smallEllipse.svg" alt="" class="smallElipse" />
+                <img src="./images/Rectangle 3.svg" alt="" class="rectangle" />
+                <img src="./images/Collab.svg" alt="" class="collabWord" />
 
-        <button class="elipseButton">Explore Products</button>
+                <button class="elipseButton">Explore Products</button>
+            </div>
+        </section>
 
-    </div>
-</section>
+        <section class="fiveIconsContainer">
+            <h2>Trusted by top brands</h2>
+            <div class="fiveIconContainer">
+                <img src="./icons/firstIcon.svg" alt="">
+                <img src="./icons/secondIcon.svg" alt="">
+                <img src="./icons/thirdIcon.svg" alt="">
+                <img src="./icons/fourthIcon.svg" alt="">
+                <img src="./icons/fifthIcon.svg" alt="">
+            </div>
+        </section>
 
-<section class="fiveIconsContainer">
-    <h2>Trusted by top brands</h2>
-    <div class="fievIconContainer">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-    </div>
-</section>
+        <section class="howHelpContainer">
+            <h2>How does Collab-app help?</h2>
 
-<section class="howHelpContainer">
-<h2>How does Collab-app help?</h2>
+            <div class="paraPhoneContainer">
+                <div class="paraContainer">
+                    <div class="howHelpButton">
+                        <button class="vendorAppBtn">Vendor app</button>
+                        <button class="superVisiorBtn">Site Supervisor app</button>
+                    </div>
 
-<div class="paraPhoneContainer">
-    <div class="paraContainer">
-<div class="howHelpButton"></div>
-    <div class="imgContainer"></div>
-    </div>
-</div>
+                    <div class="allTextContainer">
+                        <p>Work/Material request: Whenever a client wants to start a work, request notifications with
+                            date and time for materials and artisians will be promted through their app.</p>
+                        <p>Project Management: Work on multiple projects...see more</p>
+                        <p>Payment: Get paid for the step by step work...see more</p>
+                        <p>Tutorials: Explore the video tutorials to learn... see more</p>
+                    </div>
+
+                </div>
 
 
-</section>
+
+
+
+
+                <div class="imgContainer">
+                    <img src="./images/bigPhone.svg" alt="">
+                </div>
+            </div>
+
+
+        </section>
     </main>
 
     <aside></aside>
