--- a/collab/index.html
+++ b/collab/index.html
@@ -67,35 +67,28 @@
 
         <section class="howHelpContainer">
             <h2>How does Collab-app help?</h2>
-
             <div class="paraPhoneContainer">
                 <div class="paraContainer">
-                    <div class="howHelpButton">
+                    <div class="howHelpButtons">
                         <button class="vendorAppBtn">Vendor app</button>
                         <button class="superVisiorBtn">Site Supervisor app</button>
                     </div>
-
                     <div class="allTextContainer">
-                        <p>Work/Material request: Whenever a client wants to start a work, request notifications with
+                        <p class="textBox firstBox"> <strong>Work/Material request:</strong> Whenever a client wants to
+                            start a work, request notifications with
                             date and time for materials and artisians will be promted through their app.</p>
-                        <p>Project Management: Work on multiple projects...see more</p>
-                        <p>Payment: Get paid for the step by step work...see more</p>
-                        <p>Tutorials: Explore the video tutorials to learn... see more</p>
+                        <p class="textBox secondBox"> <strong>Project Management:</strong> Work on multiple projects...
+                            <b>see more</b> </p>
+                        <p class="textBox thirdBox"> <strong>Payment:</strong> Get paid for the step by step work...
+                            <b>see more</b> </p>
+                        <p class="textBox forthBox"> <strong>Tutorials:</strong> Explore the video tutorials to learn...
+                            <b>see more</b> </p>
                     </div>
-
                 </div>
-
-
-
-
-
-
                 <div class="imgContainer">
                     <img src="./images/bigPhone.svg" alt="">
                 </div>
             </div>
-
-
         </section>
     </main>
 
