--- a/collab/index.html
+++ b/collab/index.html
@@ -78,11 +78,14 @@
                             start a work, request notifications with
                             date and time for materials and artisians will be promted through their app.</p>
                         <p class="textBox secondBox"> <strong>Project Management:</strong> Work on multiple projects...
-                            <b>see more</b> </p>
+                            <b>see more</b>
+                        </p>
                         <p class="textBox thirdBox"> <strong>Payment:</strong> Get paid for the step by step work...
-                            <b>see more</b> </p>
+                            <b>see more</b>
+                        </p>
                         <p class="textBox forthBox"> <strong>Tutorials:</strong> Explore the video tutorials to learn...
-                            <b>see more</b> </p>
+                            <b>see more</b>
+                        </p>
                     </div>
                 </div>
                 <div class="imgContainer">
@@ -90,6 +93,82 @@
                 </div>
             </div>
         </section>
+
+        <section class="videoContainer">
+            <h2 videoHeader>Fastest, Safest & Budget friendly</h2>
+            <p class="videoPara">Managing your projects on spreadsheet or messaging app is a time-taking and inefficient
+                way.They can't link various project data effectively at once place , thus you won't be able to avoid
+                project cost escalation effectively .</p>
+            <iframe width="1060" height="415" src="https://www.youtube.com/embed/n2U3vjfmjig?si=9vi-36u1xmU_kaYw"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+
+        <section class="projectsDoneContainer">
+            <h2 class="projectsDoneHeader">Projects done on Collab</h2>
+            <div class="cardsContainer">
+                <div class="projectDoneCard">
+                    <img src="./images/Rectangle 35.png" alt="" />
+                    <p class="projectDoneParaText">Builders</p>
+                    <p class="projectDoneParaNumber">100+</p>
+                </div>
+                <div class="projectDoneCard">
+                    <img src="./images/Rectangle 34.png" alt="" />
+                    <p class="projectDoneParaText">Contractors</p>
+                    <p class="projectDoneParaNumber">50+</p>
+                </div>
+                <div class="projectDoneCard">
+                    <img src="./images/Rectangle 21.png" alt="" />
+                    <p class="projectDoneParaText">Design Build Firm</p>
+                    <p class="projectDoneParaNumber">30+</p>
+                </div>
+            </div>
+        </section>
+        <section class="readyToStartContainer">
+            <h2 class="readyTostartHeader">Ready to start with Collab apps?</h2>
+            <span class="readyToStartSpan">Choose the package that suits you.</span>
+            <div class="ReadyToStartDiscountContainer">
+                <span class="readyToStartMonthly">Monthly</span>
+                <img src="./images/greenButton.svg" alt="">
+                <span class="readyToStartYearly">Yearly</span>
+                <span class="tenProcentDiscount">10% discount</span>
+            </div>
+
+            <div class="bigCardsContainer">
+                <div class="bigCard bigCardOne">
+                    <span>Basic</span>
+                    <h2>Rs.5000</h2>
+                    <button>Request Demo</button>
+                    <ul>
+                        <li>Create BoQ</li>
+                        <li>Release Purchase Orders</li>
+                        <li>Cash flow analysis</li>
+                    </ul>
+                </div>
+                <div class="bigCard bigCardTwo">
+                    <span>Essential</span>
+                    <h2>Rs.5000</h2>
+                    <button>Request Demo</button>
+                    <ul>
+                        <li>Create BoQ</li>
+                        <li>Release Purchase Orders</li>
+                        <li>Cash flow analysis</li>
+                        <li>Vendor App</li>
+                        <li>Site Engineer App</li>
+                        <li>Client App</li>
+                    </ul>
+                </div>
+                <div class="bigCard bigCardThree">
+                    <span>Enterprise</span>
+                    <h2>Contact sales team</h2>
+                    <button>Request Demo</button>
+                    <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
     <aside></aside>
