--- a/collab/index.html
+++ b/collab/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>collab</title>
 </head>
 
@@ -166,7 +167,20 @@
                     <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
                 </div>
             </div>
+        </section>
 
+        <section class="reviewContainer">
+            <img src="./images/stars.svg" alt="" class="stars">
+            <div class="revieParaContainer"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque
+                pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi
+                facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque
+                accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi
+                aliquet mi gravida velit enim.</p>
+            <div class="reviewPhoto">
+                <img src="./images/Ellipse 24.png" alt="">
+                <span>Designation</span>
+            </div>
         </section>
 
     </main>
