--- a/collab/index.html
+++ b/collab/index.html
@@ -171,14 +171,15 @@
 
         <section class="reviewContainer">
             <img src="./images/stars.svg" alt="" class="stars">
-            <div class="revieParaContainer"></div>
+            <div class="revieParaContainer">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque
                 pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi
                 facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque
                 accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi
                 aliquet mi gravida velit enim.</p>
+            </div>
             <div class="reviewPhoto">
-                <img src="./images/Ellipse 24.png" alt="">
+                <img src="./images/face.png" alt="" class="face">
                 <span>Designation</span>
             </div>
         </section>
