--- a/collab/index.html
+++ b/collab/index.html
@@ -172,15 +172,57 @@
         <section class="reviewContainer">
             <img src="./images/stars.svg" alt="" class="stars">
             <div class="revieParaContainer">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque
-                pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi
-                facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque
-                accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi
-                aliquet mi gravida velit enim.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque
+                    pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi
+                    facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius
+                    neque
+                    accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi
+                    aliquet mi gravida velit enim.</p>
             </div>
             <div class="reviewPhoto">
                 <img src="./images/face.png" alt="" class="face">
                 <span>Designation</span>
+            </div>
+        </section>
+
+        <section class="PauliusContainer">
+            <h2 class="h2Paulius">Join Us</h2>
+            <p class="pPaulius">At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next <br> billion users in the construction industry</p>
+            <button class="buttonPaulius">Explore Oppurtunities</button>
+             <div class="imgPaulius">
+              <img src="./images/Vector 1.jpg" alt="juosta" class="juosta">
+              <img src="./images/Ellipse 16.jpg" alt="veidas" class ="Veidas one">
+              <img src="./images/Ellipse 17.jpg" alt="veidas" class ="Veidas two">
+              <img src="./images/Ellipse 18.jpg" alt="veidas" class ="Veidas three">
+              <img src="./images/Ellipse 19.jpg" alt="veidas" class ="Veidas four">
+              <img src="./images/Ellipse 20.jpg" alt="veidas" class ="Veidas five">
+              <img src="./images/Ellipse 21.jpg" alt="veidas" class ="Veidas six">
+              <img src="./images/Ellipse 22.jpg" alt="veidas" class ="Veidas seven">
+              <img src="./images/Ellipse 23.jpg" alt="veidas" class ="Veidas eight">
+              <img src="./images/You.jpg" alt="tu"  class="tu">
+             
+              </div>
+            </section>      
+
+        <section class="valdas">
+            <div class="violet">
+                <h2 class="download">Download the Collab mobile apps?</h2>
+                <div class="vbtn">
+                    <button class="vbtn1">Try Free Demo</button>
+                    <button class="vbtn2">Vendor app</button>
+                    <button class="vbtn3">Site engineer app</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="valdas2">
+            <div class="vtext">
+            <h2 class="klausimas">Still have a question ?</h2>
+            <p>Phanikondru@gmail.com</p>
+            <p>9676989240</p>
+            </div>
+            <div class="vmap">
+            <img src="./images/map.png" alt="" class="map">
             </div>
         </section>
 
