--- a/collab/index.html
+++ b/collab/index.html
@@ -187,22 +187,23 @@
 
         <section class="PauliusContainer">
             <h2 class="h2Paulius">Join Us</h2>
-            <p class="pPaulius">At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next <br> billion users in the construction industry</p>
+            <p class="pPaulius">At Staart, we’re all about delivering better experiences for our customers. Join our
+                team to make impact on the next <br> billion users in the construction industry</p>
             <button class="buttonPaulius">Explore Oppurtunities</button>
-             <div class="imgPaulius">
-              <img src="./images/Vector 1.jpg" alt="juosta" class="juosta">
-              <img src="./images/Ellipse 16.jpg" alt="veidas" class ="Veidas one">
-              <img src="./images/Ellipse 17.jpg" alt="veidas" class ="Veidas two">
-              <img src="./images/Ellipse 18.jpg" alt="veidas" class ="Veidas three">
-              <img src="./images/Ellipse 19.jpg" alt="veidas" class ="Veidas four">
-              <img src="./images/Ellipse 20.jpg" alt="veidas" class ="Veidas five">
-              <img src="./images/Ellipse 21.jpg" alt="veidas" class ="Veidas six">
-              <img src="./images/Ellipse 22.jpg" alt="veidas" class ="Veidas seven">
-              <img src="./images/Ellipse 23.jpg" alt="veidas" class ="Veidas eight">
-              <img src="./images/You.jpg" alt="tu"  class="tu">
-             
-              </div>
-            </section>      
+            <div class="imgPaulius">
+                <img src="./images/Vector 1.jpg" alt="juosta" class="juosta">
+                <img src="./images/Ellipse 16.jpg" alt="veidas" class="Veidas one">
+                <img src="./images/Ellipse 17.jpg" alt="veidas" class="Veidas two">
+                <img src="./images/Ellipse 18.jpg" alt="veidas" class="Veidas three">
+                <img src="./images/Ellipse 19.jpg" alt="veidas" class="Veidas four">
+                <img src="./images/Ellipse 20.jpg" alt="veidas" class="Veidas five">
+                <img src="./images/Ellipse 21.jpg" alt="veidas" class="Veidas six">
+                <img src="./images/Ellipse 22.jpg" alt="veidas" class="Veidas seven">
+                <img src="./images/Ellipse 23.jpg" alt="veidas" class="Veidas eight">
+                <img src="./images/You.jpg" alt="tu" class="tu">
+
+            </div>
+        </section>
 
         <section class="valdas">
             <div class="violet">
@@ -217,20 +218,62 @@
 
         <section class="valdas2">
             <div class="vtext">
-            <h2 class="klausimas">Still have a question ?</h2>
-            <p>Phanikondru@gmail.com</p>
-            <p>9676989240</p>
+                <h2 class="klausimas">Still have a question ?</h2>
+                <p>Phanikondru@gmail.com</p>
+                <p>9676989240</p>
             </div>
             <div class="vmap">
-            <img src="./images/map.png" alt="" class="map">
+                <img src="./images/map.png" alt="" class="map">
+            </div>
+        </section>
+
+        <section class="contacts">
+            <div class="topLogo">
+                <img src="./images/Collab.svg" alt="logo" class="logoImg">
+                <p class="lorem">Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Viverra <br>faucibus
+                    facilisis sem eget sed <br>amet
+                    consectetur tincidunt mauris.</p>
+                <p class="follow">Follow us on:</p>
+                <div class="mediaIcons">
+                    <img src="./icons/Facebook Icon undefined.png" alt="">
+                    <img src="./icons/LinkedIn Icon undefined.png" alt="">
+                    <img src="./icons/Instagram Icon undefined.png" alt="">
+                    <img src="./icons/YouTube Icon undefined.png" alt="">
+                </div>
+            </div>
+            <div class="blogas">
+                <div class="card">
+                    <span>Company</span>
+                    <ul>
+                        <li>About</li>
+                        <li>Product</li>
+                        <li>Team</li>
+                    </ul>
+                </div>
+                <div class="card2">
+                    <span>Resources</span>
+                    <ul>
+                        <li>Blog</li>
+                    </ul>
+                </div>
+                <div class="card3">
+                    <span>Legal</span>
+                    <ul>
+                        <li>Terms of Service</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </div>
+                <span class="email">Contact Us at:</span>
+                <span class="email2">phanikondru@gmail.com</span>
             </div>
         </section>
 
     </main>
-
-    <aside></aside>
-
-    <footer></footer>
+    <footer>
+        <div class="endLine">
+            <p>@2022 Collab | All Rights Reserved</p>
+        </div>
+    </footer>
 
 
 
