--- a/bankas/b.html
+++ b/bankas/b.html
@@ -27,10 +27,87 @@
                     <li><a href="">D.U.K.</a></li>
                     <li><a href="">Naujienos</a></li>
                 </ul>
-                <button class="btn prisijungimas">Prisijungti</button>
+                <button class="btn prisijungimas">Nauja sąskaita</button>
             </nav>
         </div>
     </header>
+    <main>
+        <div class="modal">
+            <div class="card">
+                <h2>Nauja sąskaita</h2>
+                <div class="input">
+                    <div>Kliento vardas</div>
+                    <input type="text" name="clientName">
+                </div>
+                <div class="input">
+                    <div>Kliento pavardė</div>
+                    <input type="text" name="clientSurname">
+                </div>
+                <div class="buttons">
+                    <button type="button" class="green">Sukurti</button>
+                    <button type="button" class="gray">Atšaukti</button>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="products-container">
+            <div class="products">
+                <div class="buttons">
+                    <div class="seed">Klientų sąrašas</div>
+                </div>
+            </div>
+        </div>
+        <div class="modal modal--create --modal">
+            <div class="card">
+                <div class="input">
+                    <div>Vardas</div>
+                    <input type="text" name="vardas">
+                </div>
+                <div class="input">
+                    <div>Pavardė</div>
+                    <input type="text" name="pavardė">
+                </div>
+                <div class="input">
+                    <div>Lėšų suma</div>
+                    <input type="text" name="lėšų suma">
+                </div>
+                <div class="buttons">
+                    <button type="button" class="green --submit">Sukurti</button>
+                    <button type="button" class="gray --close">Atšaukti</button>
+                </div>
+            </div>
+        </div> -->
+        <!-- <div class="modal modal--delete --modal">
+            <div class="card">
+                <h2>Delete</h2>
+                <h2>Are you sure to delete <span class="product--title"></span>?</h2>
+                <div class="buttons">
+                    <button type="button" class="green --submit">Yes</button>
+                    <button type="button" class="gray --close">Cancel</button>
+                </div>
+            </div>
+        </div>
+        <div class="modal modal--edit --modal">
+            <div class="card">
+                <h2>Edit</h2>
+                <div class="input">
+                    <div>Product Title</div>
+                    <input type="text" name="productTitle">
+                </div>
+                <div class="input">
+                    <div>Product Price</div>
+                    <input type="text" name="productPrice">
+                </div>
+                <div class="input">
+                    <div>Product Description</div>
+                    <textarea name="productDesc"></textarea>
+                </div>
+                <div class="buttons">
+                    <button type="button" class="green --submit">Save</button>
+                    <button type="button" class="gray --close">Cancel</button>
+                </div>
+            </div>
+        </div> -->
+    </main>
     
 </body>
 </html>
