--- a/bankas/b.html
+++ b/bankas/b.html
@@ -27,12 +27,12 @@
                     <li><a href="">D.U.K.</a></li>
                     <li><a href="">Naujienos</a></li>
                 </ul>
-                <button class="btn prisijungimas">Nauja sąskaita</button>
+                <button type="button" class="btn prisijungimas --create">Nauja sąskaita</button>
             </nav>
         </div>
     </header>
     <main>
-        <div class="modal">
+        <div class="modal modal--create --modal">
             <div class="card">
                 <h2>Nauja sąskaita</h2>
                 <div class="input">
@@ -44,8 +44,8 @@
                     <input type="text" name="clientSurname">
                 </div>
                 <div class="buttons">
-                    <button type="button" class="green">Sukurti</button>
-                    <button type="button" class="gray">Atšaukti</button>
+                    <button type="button" class="green --submit">Sukurti</button>
+                    <button type="button" class="gray --close">Atšaukti</button>
                 </div>
             </div>
         </div>
