--- a/bankas/b.html
+++ b/bankas/b.html
@@ -32,6 +32,16 @@
         </div>
     </header>
     <main>
+
+        <div class="products-container">
+            <div class="products">
+                <div class="buttons">
+                    <div class="seed">Klientų sąrašas</div>
+                </div>
+                <div class="list --list"></div>
+            </div>
+        </div>
+
         <div class="modal modal--create --modal">
             <div class="card">
                 <h2>Nauja sąskaita</h2>
@@ -43,20 +53,18 @@
                     <div>Kliento pavardė</div>
                     <input type="text" name="clientSurname">
                 </div>
+                <div class="input">
+                    <div>Pinigų suma</div>
+                    <input type="number" name="clientMoney">
+                </div>
                 <div class="buttons">
                     <button type="button" class="green --submit">Sukurti</button>
                     <button type="button" class="gray --close">Atšaukti</button>
                 </div>
             </div>
         </div>
-        <!-- <div class="products-container">
-            <div class="products">
-                <div class="buttons">
-                    <div class="seed">Klientų sąrašas</div>
-                </div>
-            </div>
-        </div>
-        <div class="modal modal--create --modal">
+        
+        <!-- <div class="modal modal--create --modal">
             <div class="card">
                 <div class="input">
                     <div>Vardas</div>
