--- a/bankas/b.html
+++ b/bankas/b.html
@@ -53,10 +53,10 @@
                     <div>Kliento pavardė</div>
                     <input type="text" name="clientSurname">
                 </div>
-                <div class="input">
+                <!-- <div class="input">
                     <div>Pinigų suma</div>
                     <input type="number" name="clientMoney">
-                </div>
+                </div> -->
                 <div class="buttons">
                     <button type="button" class="green --submit">Sukurti</button>
                     <button type="button" class="gray --close">Atšaukti</button>
@@ -84,17 +84,17 @@
                 </div>
             </div>
         </div> -->
-        <!-- <div class="modal modal--delete --modal">
+        <div class="modal modal--delete --modal">
             <div class="card">
-                <h2>Delete</h2>
-                <h2>Are you sure to delete <span class="product--title"></span>?</h2>
+                <h2>Ištrinti</h2>
+                <h2>Ar jūs tikrai norite ištrinti <span class="client--clientSurname"></span>?</h2>
                 <div class="buttons">
-                    <button type="button" class="green --submit">Yes</button>
-                    <button type="button" class="gray --close">Cancel</button>
+                    <button type="button" class="green --submit">Trinti</button>
+                    <button type="button" class="gray --close">Atšaukti</button>
                 </div>
             </div>
         </div>
-        <div class="modal modal--edit --modal">
+        <!-- <div class="modal modal--edit --modal">
             <div class="card">
                 <h2>Edit</h2>
                 <div class="input">
