--- a/bankas/b.html
+++ b/bankas/b.html
@@ -64,26 +64,27 @@
             </div>
         </div>
         
-        <!-- <div class="modal modal--create --modal">
+        <div class="modal modal--edit1 --modal">
             <div class="card">
+                <h2>Pridėti lėšų</h2>
                 <div class="input">
-                    <div>Vardas</div>
-                    <input type="text" name="vardas">
+                    <div>Kliento vardas</div>
+                    <input type="text" name="clientName">
                 </div>
                 <div class="input">
-                    <div>Pavardė</div>
-                    <input type="text" name="pavardė">
+                    <div>Kliento pavardė</div>
+                    <input type="text" name="clientSurname">
                 </div>
                 <div class="input">
                     <div>Lėšų suma</div>
-                    <input type="text" name="lėšų suma">
+                    <input type="text" name="clientMoney">
                 </div>
                 <div class="buttons">
-                    <button type="button" class="green --submit">Sukurti</button>
+                    <button type="button" class="green --submit">Pridėti</button>
                     <button type="button" class="gray --close">Atšaukti</button>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="modal modal--delete --modal">
             <div class="card">
                 <h2>Ištrinti</h2>
@@ -94,27 +95,27 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="modal modal--edit --modal">
+        <div class="modal modal--edit2 --modal">
             <div class="card">
-                <h2>Edit</h2>
+                <h2>Nuskaičiuoti lėšas</h2>
                 <div class="input">
-                    <div>Product Title</div>
-                    <input type="text" name="productTitle">
+                    <div>Vardas</div>
+                    <input type="text" name="clientName">
                 </div>
                 <div class="input">
-                    <div>Product Price</div>
-                    <input type="text" name="productPrice">
+                    <div>Pavardė</div>
+                    <input type="text" name="clientSurname">
                 </div>
                 <div class="input">
-                    <div>Product Description</div>
-                    <textarea name="productDesc"></textarea>
+                    <div>Lėšų suma</div>
+                    <input type="text" name="clientMoney">
                 </div>
                 <div class="buttons">
-                    <button type="button" class="green --submit">Save</button>
-                    <button type="button" class="gray --close">Cancel</button>
+                    <button type="button" class="green --submit">Nuskaičiuoti</button>
+                    <button type="button" class="gray --close">Atšaukti</button>
                 </div>
             </div>
-        </div> -->
+        </div>
     </main>
     
 </body>
